# KPulse

./: CMakeLists.txt  README.md
assets/: kpulse.qrc
daemon/: CMakeLists.txt
daemon/src/: baseline_tracker.cpp  baseline_tracker.hpp  dbus_interface.xml  journald_reader.cpp  journald_reader.hpp  kpulse_daemon.cpp  kpulse_daemon.hpp  main.cpp  metrics_collector.cpp  metrics_collector.hpp
launcher/: CMakeLists.txt
launcher/src/: main.cpp
libkpulse/: CMakeLists.txt
libkpulse/include/kpulse/: common.hpp  db.hpp  event.hpp  ipc_client.hpp
libkpulse/src/: common.cpp  db.cpp  event.cpp  ipc_client.cpp
packaging/: kpulse-daemon.user.service
tray/: CMakeLists.txt
tray/src/: main.cpp  tray_app.cpp  tray_app.hpp
ui/: CMakeLists.txt
ui/src/: event_model.cpp  event_model.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  timeline_view.cpp  timeline_view.hpp
